k8s/manifest/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: reddit-clone-deployment
  labels:
    app: reddit-clone
spec:
  replicas: 2
  selector:
    matchLabels:
      app: reddit-clone
  template:
    metadata:
      labels:
        app: reddit-clone
    spec:
      containers:
      - name: reddit-clone
        image: gyenoch/reddit-clone:11
        ports:
        - containerPort: 3000

---
apiVersion: v1
kind: Service
metadata:
  name: reddit-clone-svc
spec:
  selector:
    app: reddit-clone
  ports:
    - protocol: "TCP"
      port: 80
      targetPort: 3000 
  type: LoadBalancer
